# BuzzOS

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs
kernel/src/devices/: defs.rs  ide.rs  mod.rs
kernel/src/fs/: bio.rs  buf.rs  defs.rs  mod.rs
kernel/src/interrupts/: apic.rs  defs.rs  handlers.rs  idt.rs  interrupt_handlers.rs  intrpt.rs  mod.rs
kernel/src/memory/: gdt.rs  mem.rs
kernel/src/x86/: helpers.rs
mkfs/: Cargo.toml
mkfs/.cargo/: config.toml
mkfs/src/: main.rs
shared_fs/: Cargo.toml
shared_fs/src/: dirent.rs  inode.rs  lib.rs  superblock.rs
user/: x86-target.json
user/.cargo/: config.toml
