[package]
name = "mkfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata]
cargo-features = ["build-std"]

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
shared_fs = {path = "../shared_fs/"}
